Fix Firefox scrollbar css

--- a/public/css/lection/homework.css
+++ b/public/css/lection/homework.css
@@ -1206,7 +1206,7 @@ button {
 }
 
 /* Firefox scrollbar css */
-html, .admin-course {
+html {
     scrollbar-color: #666666 #cccccc;
     scrollbar-width: thin !important;
 }
